# media-app

./: README.md
account/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
account/config/: settings.py  urls.py
account/users/: models.py  serializers.py  tests.py
account/users/migrations/: 0001_initial.py
doc/: erd.pu  tables.pu
frontend/client/: package.json
frontend/client/public/: index.html  manifest.json
frontend/client/src/: App.tsx  index.tsx  serviceWorker.ts
frontend/client/src/app/: hooks.ts
frontend/client/src/components/App/: App.test.tsx  App.tsx
frontend/client/src/components/Footer/: Footer.tsx
frontend/client/src/components/Header/: Header.tsx
frontend/client/src/components/Layout/: Layout.css  Layout.test.tsx  Layout.tsx
frontend/client/src/features/About/: AboutPage.tsx
frontend/client/src/features/Article/: ArticlePage.tsx
frontend/client/src/features/ArticleEditor/: ArticleEditorPage.tsx
frontend/client/src/features/Home/: HomePage.tsx
frontend/client/src/features/Login/: LoginPage.tsx
frontend/client/src/features/MyPage/: MyPage.tsx
frontend/client/src/features/Profile/: ProfilePage.tsx
frontend/client/src/features/Setting/: SettingPage.tsx
frontend/client/src/features/Signup/: SignupPage.tsx
frontend/server/public/: index.html
frontend/server/routes/: index.js
media/: .gitignore  README.md  intellij-java-google-style.xml  pom.xml
media/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-distroless
media/src/main/resources/: application.yml
(+34 files in other folders)
