[tool.poetry]
name = "account"
version = "1.0.0"
description = "account service"
authors = ["jonki324 <jonki324@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
django-environ = "^0.8.1"
djoser = "^2.1.0"
djongo = "^1.3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-bugbear = "^21.9.2"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.mypy]
python_version = 3.9
show_column_numbers  = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119
